<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HomeActivity">


    <ImageView
        android:id="@+id/mini_button"
        android:layout_width="wrap_content"
        android:layout_height="122dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="124dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="505dp"
        android:contentDescription="@string/mini_logo"
        app:srcCompat="@drawable/mini_logo" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="65dp"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="172dp"
        android:layout_marginTop="294dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="373dp"
        android:background="#00CCDAE4"
        app:srcCompat="@drawable/search_logo" />

    <ImageButton
        android:id="@+id/form_logo"
        android:layout_width="67dp"
        android:layout_height="74dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="286dp"
        android:layout_marginEnd="302dp"
        android:layout_marginBottom="370dp"
        android:background="#00CCDAE4"
        android:contentDescription="@string/takes_data"
        app:srcCompat="@drawable/form" />

    <ImageButton
        android:id="@+id/help_button"
        android:layout_width="71dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="296dp"
        android:layout_marginTop="293dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="371dp"
        android:background="#00CCDAE4"
        android:contentDescription="@string/helps"
        app:srcCompat="@drawable/help_logo" />

    <TextView
        android:id="@+id/help_name"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/help_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="283dp"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="-12dp"
        android:layout_marginBottom="437dp"
        android:text="@string/help"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Search_name"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="156dp"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="437dp"
        android:text="@string/search"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/form_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/form_logo"
        android:layout_alignEnd="@+id/form_logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="437dp"
        android:text="@string/form"
        android:textAlignment="center"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="37dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="338dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="659dp"
        app:srcCompat="@drawable/logout_logo"
        android:onClick="logout"/>

</RelativeLayout>